--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -30,4 +30,4 @@ api_version = "2026-04"
 scopes = "read_customers,read_discounts,read_orders,read_price_rules,read_products,write_customers,write_discounts,write_orders,write_price_rules,write_products,read_themes,write_themes,read_content,write_content"
 
 [auth]
-redirect_urls = [ "https://your-app.onrender.com/api/auth" ]
+redirect_urls = [ "https://your-app.onrender.com/api/auth", https://your-app.onrender.com/auth/callback, https://aapki-app-ka-naam.onrender.com/auth/callback ]
