--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -41,6 +41,6 @@ scopes = "read_content,read_customers,read_discounts,read_orders,read_price_rule
 redirect_urls = [   "https://your-app.onrender.com/auth/callback",   "https://your-app.onrender.com/auth/shopify/callback",   "https://your-app.onrender.com/api/auth" ]
 
 [app_proxy]
-url = "https://zshops-ray-amendment-extra.trycloudflare.com/app/custom-proxy"
+url = "https://your-app.onrender.com/app/custom-proxy"
 subpath = "public"
 prefix = "apps"
