--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -2,7 +2,7 @@
 
 client_id = "5c20fc9ff28f26bb9f01df45b23e0da0"
 name = "testtemplate"
-application_url = "https://your-app.onrender.com"
+application_url = "https://testtemplates.onrender.com"
 embedded = true
 
 [build]
@@ -38,9 +38,9 @@ api_version = "2026-04"
 scopes = "read_content,read_customers,read_discounts,read_orders,read_price_rules,read_products,read_themes,write_content,write_customers,write_discounts,write_orders,write_price_rules,write_products,write_themes"
 
 [auth]
-redirect_urls = [   "https://your-app.onrender.com/auth/callback",   "https://your-app.onrender.com/auth/shopify/callback",   "https://your-app.onrender.com/api/auth" ]
+redirect_urls = [   "https://testtemplates.onrender.com/auth/callback",   "https://testtemplates.onrender.com/auth/shopify/callback",   "https://your-app.onrender.com/api/auth" ]
 
 [app_proxy]
-url = "https://your-app.onrender.com/app/custom-proxy"
+url = "https://testtemplates.onrender.com/app/custom-proxy"
 subpath = "public"
 prefix = "apps"
