--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -32,7 +32,7 @@ api_version = "2026-04"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_content,read_customers,read_discounts,read_orders,read_price_rules,read_products,read_themes,write_content,write_customers,write_discounts,write_orders,write_price_rules,write_products,write_themes"
+scopes = "read_customers,read_discounts,read_orders,read_price_rules,read_products,write_customers,write_discounts,write_orders,write_price_rules,write_products,write_themes,read_themes,write_content,read_content,write_pixels,read_pixels,read_customer_events"
 
 [auth]
 redirect_urls = [   "https://testtemplates.onrender.com/auth/callback",   "https://testtemplates.onrender.com/auth/shopify/callback",   "https://your-app.onrender.com/api/auth" ]
