--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -11,31 +11,32 @@ automatically_update_urls_on_dev = true
 [webhooks]
 api_version = "2026-04"
 
-
-
-  
   [[webhooks.subscriptions]]
-  topics = [ "app/uninstalled" ]
-  uri = "/webhooks/app/uninstalled"
+  topics = [ "orders/cancelled", "checkouts/update", "orders/create" ]
+  uri = "/webhooks/orders/create"
+
+  [[webhooks.subscriptions]]
+  topics = [ "customers/create", "customers/update" ]
+  uri = "/webhookscutomer"
 
   [[webhooks.subscriptions]]
   topics = [ "app/scopes_update" ]
   uri = "/webhooks/app/scopes_update"
 
-    [[webhooks.subscriptions]]
-  topics = [ "customers/update", "customers/create" ]
-  uri = "/webhookscutomer"
-
   [[webhooks.subscriptions]]
-  topics = [ "orders/create", "orders/cancelled", "checkouts/update" ]
-  uri = "/webhooks/orders/create"
+  topics = [ "app/uninstalled" ]
+  uri = "/webhooks/app/uninstalled"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 scopes = "read_customers,read_discounts,read_orders,read_price_rules,read_products,write_customers,write_discounts,write_orders,write_price_rules,write_products,write_themes,read_themes,write_content,read_content,write_pixels,read_pixels,read_customer_events"
 
 [auth]
-redirect_urls = [   "https://testtemplates.onrender.com/auth/callback",   "https://testtemplates.onrender.com/auth/shopify/callback",   "https://your-app.onrender.com/api/auth" ]
+redirect_urls = [
+  "https://testtemplates.onrender.com/auth/callback",
+  "https://testtemplates.onrender.com/auth/shopify/callback",
+  "https://testtemplates.onrender.com/api/auth"
+]
 
 [app_proxy]
 url = "https://testtemplates.onrender.com/app/custom-proxy"
